se agrego btn ver mas de las tarjetas

--- a/pages/maquinas.html
+++ b/pages/maquinas.html
@@ -68,7 +68,7 @@
 
                 <div class="row justify-content-center g-5 h-100 d-flex justify-content-evenly align-items-start ">
 
-                        <h3 class="productos m-5" id="sectionmaquina">Cortadoras de Pelo </h3>
+                    <h3 class="productos m-5" id="sectionmaquina">Cortadoras de Pelo </h3>
 
                     <div class="card tarjproductos " style="width: 18rem">
                         <img src="../assets/maquina01.jpg" class="card-img-top mt-3"
@@ -77,12 +77,29 @@
                         <div class="text-center m-3">
                             <h3 class="fs-6">Maquina Cortadora De Pelo Super Taper Profesional </h3>
                             <p class="fw-bolder">$22990</p>
-                            <h4>Motor vibratorio profesional V5000 para durabilidad Ideal para grandes exigencias
+                            <!-- <h4>Motor vibratorio profesional V5000 para durabilidad Ideal para grandes exigencias
                                 Trabaja con
                                 cable, ideal para uso continuo Gran potencia, alta precisión con cuchillas
                                 profesionales,
                                 Peso:
-                                450 g, incluye: clipper, protector de cuchilla, 4 guias peine plásticos </h4>
+                                450 g, incluye: clipper, protector de cuchilla, 4 guias peine plásticos </h4> -->
+                            <button tabindex="0" 
+                                class="btnDeTarjetas" 
+                                role="button" 
+                                data-bs-toggle="popover" 
+                                data-bs-trigger="focus"
+                                data-bs-placement="bottom"
+                                data-bs-content="Motor vibratorio profesional V5000 para durabilidad Ideal para grandes exigencias
+                                Trabaja con
+                                cable, ideal para uso continuo Gran potencia, alta precisión con cuchillas
+                                profesionales,
+                                Peso:
+                                450 g, incluye: clipper, protector de cuchilla, 4 guias peine plásticos"
+                                data-bs-title="Descripción del Producto: ">
+                                Ver Más
+                            </button>
+
+
                         </div>
                     </div>
 
@@ -92,13 +109,22 @@
                             alt="Cortadora de pelo profesional 1400 Wahl">
 
                         <div class="text-center m-3">
-                            <h3 class="fs-6">Cortadora de pelo profesional 1400 Wahl Super Taper Alemania </h3>
+                            <h3 class="fs-6">Cortadora de pelo profesional 1400 Wahl </h3>
                             <p class="fw-bolder">$8990</p>
-                            <h4>Máquina Wahl Taper Super 1400 Wahl. Silenciosa, robusta y con una vida útil muy
+                                <button tabindex="0" 
+                                class="btnDeTarjetas"
+                                role="button" 
+                                data-bs-toggle="popover" 
+                                data-bs-trigger="focus" 
+                                data-bs-placement="bottom"
+                                data-bs-content="Máquina Wahl Taper Super 1400 Wahl. Silenciosa, robusta y con una vida útil muy
                                 prolongada.
                                 Cuchilla cromada de alta precisión afilada con diamante de fabricación alemana, Cable
                                 240cm,
-                                Tensíon 220V - 50hz </h4>
+                                Tensíon 220V - 50hz "
+                                data-bs-title="Descripción del Producto: "  >
+                                Ver Más
+                            </button>
                         </div>
                     </div>
 
@@ -107,15 +133,24 @@
                             alt="Maquina Cortar Pelo Inalambrica Duga">
 
                         <div class="text-center m-3">
-                            <h3 class="fs-6">Maquina Cortar Pelo Inalambrica Duga Barber Profesional D405</h3>
+                            <h3 class="fs-6">Maquina Duga Barber Profesional D405</h3>
                             <p class="fw-bolder">$9490</p>
-                            <h4>Motor profesional de 5500 RPM, Hasta 120 min de corte continuo sin cable cuando está
+                                <button tabindex="0" 
+                                class="btnDeTarjetas"
+                                role="button" 
+                                data-bs-toggle="popover" 
+                                data-bs-trigger="focus" 
+                                data-bs-placement="bottom"
+                                data-bs-content="(Inalambrica) Motor profesional de 5500 RPM, Hasta 120 min de corte continuo sin cable cuando está
                                 totalmente
-                                cargado, Inoxidable. Cuchilla de la más alta calidad de acero y carbón.</h4>
+                                cargado, Inoxidable. Cuchilla de la más alta calidad de acero y carbón."
+                                data-bs-title="Descripción del Producto: " >
+                                Ver Más
+                            </button>
                         </div>
                     </div>
 
-                        <h3 class="productos m-5" id="sectionpatilleras">Patilleras</h3>
+                    <h3 class="productos m-5" id="sectionpatilleras">Patilleras</h3>
 
                     <div class="card tarjproductos " style="width: 18rem">
                         <img src="../assets/oferta03ed.png" class="card-img-top mt-3"
@@ -124,12 +159,27 @@
                         <div class="text-center m-3">
                             <h3 class="fs-6">MAQ DETAILER BLACK & GOLD C/CABLE 8081 WAHL </h3>
                             <p class="fw-bolder">$23990</p>
-                            <h4>maquina Detailer Black & Gold edición limitada de 5 estrellas está diseñada para uso
+                                <button tabindex="0" 
+                                class="btnDeTarjetas"
+                                role="button" 
+                                data-bs-toggle="popover" 
+                                data-bs-trigger="focus" 
+                                data-bs-placement="bottom"
+                                data-bs-content="Máquina Detailer Black & Gold edición limitada de 5 estrellas está diseñada para uso
                                 profesional
                                 únicamente y está fabricada para ofrecer el rendimiento nítido que los expertos
                                 demandan.
                                 Está
-                                equipada con una hoja en T extra ancha y ajustable para un corte preciso y cerrado.</h4>
+                                equipada con una hoja en T extra ancha y ajustable para un corte preciso y cerrado."
+                                data-bs-title="Descripción del Producto: " 
+                                data-bs-content="Motor vibratorio profesional V5000 para durabilidad Ideal para grandes exigencias
+                                Trabaja con
+                                cable, ideal para uso continuo Gran potencia, alta precisión con cuchillas
+                                profesionales,
+                                Peso:
+                                450 g, incluye: clipper, protector de cuchilla, 4 guias peine plásticos">
+                                Ver Más
+                            </button>
                         </div>
                     </div>
 
@@ -139,11 +189,20 @@
                             alt="Babyliss Pro MAQ CORTE 787 GOLD BOOST FX BABYLISS">
 
                         <div class="text-center m-3">
-                            <h3 class="fs-6">Babyliss Pro MAQ CORTE 787 GOLD BOOST FX BABYLISS</h3>
+                            <h3 class="fs-6">Babyliss Pro 787 GOLD BOOST FX BABYLISS</h3>
                             <p class="fw-bolder">$69990</p>
-                            <h4>Motor sin escobillas de alta velocidad y alto torque capaz de alcanzar 7200RPM, Nueva
+                                <button tabindex="0" 
+                                class="btnDeTarjetas"
+                                role="button" 
+                                data-bs-toggle="popover" 
+                                data-bs-trigger="focus" 
+                                data-bs-placement="bottom"
+                                data-bs-content="Motor sin escobillas de alta velocidad y alto torque capaz de alcanzar 7200RPM, Nueva
                                 batería de
-                                iones de litio de 3300 mAh con autononía de 4 horas.Con o sin cable</h4>
+                                iones de litio de 3300 mAh con autononía de 4 horas.Con o sin cable"
+                                data-bs-title="Descripción del Producto: " >
+                                Ver Más
+                            </button>
                         </div>
                     </div>
 
@@ -155,14 +214,23 @@
                         <div class="text-center m-3">
                             <h3 class="fs-6">Máquina Patillera Profesional Pivot Trimmer </h3>
                             <p class="fw-bolder">$17999</p>
-                            <h4>La Patillera de Corte con cuchilla de detalles DOS CANALES DE RECARGA (USB - 220V)
+                                <button tabindex="0" 
+                                class="btnDeTarjetas"
+                                role="button" 
+                                data-bs-toggle="popover" 
+                                data-bs-trigger="focus" 
+                                data-bs-placement="bottom"
+                                data-bs-content="La Patillera de Corte con cuchilla de detalles DOS CANALES DE RECARGA (USB - 220V)
                                 Exclusiva
-                                Cuchilla en Forma de "T" Para detalles Cuchilla de aleación de titanio Diseño Ergonómico
-                                Práctica y Maniobrable Viene Con Tres Alzas de Distinto Largo</h4>
+                                Cuchilla en Forma de t Para detalles Cuchilla de aleación de titanio Diseño Ergonómico
+                                Práctica y Maniobrable Viene Con Tres Alzas de Distinto Largo"
+                                data-bs-title="Descripción del Producto: " >
+                                Ver Más
+                            </button>
                         </div>
                     </div>
 
-                        <h3 class="productos m-5" id="sectionafeitadoras">Afeitadoras</h3>
+                    <h3 class="productos m-5" id="sectionafeitadoras">Afeitadoras</h3>
 
                     <div class="card tarjproductos " style="width: 18rem">
 
@@ -172,11 +240,19 @@
                         <div class="text-center m-3">
                             <h3 class="fs-6">Afeitadora y Rapadora Fading & Shaving </h3>
                             <p class="fw-bolder">$9990</p>
-                            <h4>Máquina para rapar y afeitar con batería recargable con puerto USB Liviana y Maniobrable
-                                Rodillos
-                                de corte de alto desempeño Exclusivo recortador de Patillas Rapados y afeitados suaves y
-                                parejos
-                            </h4>
+                            <button tabindex="0" 
+                            class="btnDeTarjetas" 
+                            role="button" 
+                            data-bs-toggle="popover" 
+                            data-bs-trigger="focus" 
+                            data-bs-placement="bottom"
+                            data-bs-content="Máquina para rapar y afeitar con batería recargable con puerto USB Liviana y Maniobrable
+                            Rodillos
+                            de corte de alto desempeño Exclusivo recortador de Patillas Rapados y afeitados suaves y
+                            parejos"
+                            data-bs-title="Descripción del Producto: " >
+                            Ver Más
+                        </button>
                         </div>
                     </div>
 
@@ -187,14 +263,23 @@
                             alt="Babyliss Pro AFEITADORA DOBLE MET FOIL FX02 BABYLISS">
 
                         <div class="text-center m-3">
-                            
-                            <h3 class="fs-6">Babyliss Pro AFEITADORA DOBLE MET FOIL FX02 BABYLISS</h3>
+
+                            <h3 class="fs-6">AFEITADORA DOBLE MET FOIL FX02 BABYLISS</h3>
                             <p class="fw-bolder">$48990</p>
-                            <h4>Afeitadora Recargable de doble hoja profesional Inalambrica equipada con un cabezal de
+                                <button tabindex="0" 
+                                class="btnDeTarjetas" 
+                                role="button" 
+                                data-bs-toggle="popover" 
+                                data-bs-trigger="focus" 
+                                data-bs-placement="bottom"
+                                data-bs-content="Afeitadora Recargable de doble hoja profesional Inalambrica equipada con un cabezal de
                                 rasurado
                                 de tamaño estándar y un potente motor rotativo. Excelente para un afeitar muy al ras el
                                 rostro,
-                                el cuello y la línea de nacimiento del pelo. </h4>
+                                el cuello y la línea de nacimiento del pelo"
+                                data-bs-title="Descripción del Producto: " >
+                                Ver Más
+                            </button>
                         </div>
                     </div>
 
@@ -206,11 +291,20 @@
                         <div class="text-center m-3">
                             <h3 class="fs-6">Babyliss Pro AFEITADORA FOIL FX03 BABYLISS</h3>
                             <p class="fw-bolder">$44990</p>
-                            <h4>con un nuevo motor de alto rendimiento, una carcasa europea ergonómica ultradelgada y
+                                <button tabindex="0" 
+                                class="btnDeTarjetas"
+                                role="button" 
+                                data-bs-toggle="popover" 
+                                data-bs-trigger="focus" 
+                                data-bs-placement="bottom"
+                                data-bs-content="Con un nuevo motor de alto rendimiento, una carcasa europea ergonómica ultradelgada y
                                 una
                                 superficie de agarre de carbono única. Motor rotativo de alta velocidad - 10.000RPM.
                                 Con/Sin
-                                cable.</h4>
+                                cable."
+                                data-bs-title="Descripción del Producto: " >
+                                Ver Más
+                            </button>
                         </div>
                     </div>
 
@@ -283,6 +377,7 @@
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
         crossorigin="anonymous"></script>
     <script src="../js/bootstrap.bundle.min.js"></script>
+    <script src="../js/app.js"></script>
 </body>
 
 </html>
