arreglos del index

--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
         <div id="carrusell" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="2000">
-                    <img src="./assets/carruselfoto1.jpg" class="d-block w-100" alt="foto maquinas cortadoras de pelo">
+                    <img src="./assets/carruselfoto1.jpg" class="d-block w-100 imagenCarrusel" alt="foto maquinas cortadoras de pelo">
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                    <img src="./assets/carrusel02.jpg" class="d-block w-100" alt="foto sillon de barberia">
+                    <img src="./assets/carrusel02.jpg" class="d-block w-100 imagenCarrusel" alt="foto sillon de barberia">
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                    <img src="./assets/carrusel03.jpg" class="d-block w-100" alt="foto de salon de peluqueria">
+                    <img src="./assets/carrusel03.jpg" class="d-block w-100 imagenCarrusel" alt="foto de salon de peluqueria">
                 </div>
             </div>
         </div>
@@ -83,26 +83,26 @@
 
         <section class="categoriasinicio">
 
-            <article class="tarjetainicio" data-aos="zoom-in-right" data-aos-duration="2000">
+            <article class="tarjetainicio d-flex flex-column justify-content-end" data-aos="zoom-in-right" data-aos-duration="2000">
 
                 <a href="./pages/maquinas.html" class="botontarjetainicio">Máquinas</a>
 
             </article>
 
-            <article class="tarjetainicio-dos" data-aos="zoom-in-left" data-aos-duration="2000">
+            <article class="tarjetainicio-dos d-flex flex-column justify-content-end" data-aos="zoom-in-left" data-aos-duration="2000">
 
                 <a href="./pages/tijerasynavajas.html" class="botontarjetainicio-dos">Tijeras Y Navajas</a>
 
             </article>
         </section>
         <section class="categoriasinicio">
-            <article class="tarjetainicio-tres" data-aos="zoom-in-right" data-aos-duration="2000">
+            <article class="tarjetainicio-tres d-flex flex-column justify-content-end" data-aos="zoom-in-right" data-aos-duration="2000">
 
                 <a href="./pages/contacto.html" class="botontarjetainicio">Contacto</a>
 
             </article>
 
-            <article class="tarjetainicio-cuatro" data-aos="zoom-in-left" data-aos-duration="2000">
+            <article class="tarjetainicio-cuatro d-flex flex-column justify-content-end" data-aos="zoom-in-left" data-aos-duration="2000">
 
                 <a href="./pages/accesorios.html" class="botontarjetainicio">Accesorios</a>
 
