--- a/pages/maquinas.html
+++ b/pages/maquinas.html
@@ -153,7 +153,7 @@
                     <h3 class="productos m-5" id="sectionpatilleras">Patilleras</h3>
 
                     <div class="card tarjproductos " style="width: 18rem">
-                        <img src="../assets/oferta03ed.png" class="card-img-top mt-3"
+                        <img src="../assets/oferta03ed.jpg" class="card-img-top mt-3"
                             alt="MAQ DETAILER BLACK & GOLD C/CABLE 8081 WAHL ">
 
                         <div class="text-center m-3">
@@ -185,7 +185,7 @@
 
                     <div class="card tarjproductos " style="width: 18rem">
 
-                        <img src="../assets/maquina01ed.png" class="card-img-top mt-3"
+                        <img src="../assets/maquina01ed.jpg" class="card-img-top mt-3"
                             alt="Babyliss Pro MAQ CORTE 787 GOLD BOOST FX BABYLISS">
 
                         <div class="text-center m-3">
@@ -208,7 +208,7 @@
 
                     <div class="card tarjproductos " style="width: 18rem">
 
-                        <img src="../assets/oferta05.png" class="card-img-top mt-3"
+                        <img src="../assets/oferta05.jpg" class="card-img-top mt-3"
                             alt="Máquina Patillera Profesional Pivot Trimmer ">
 
                         <div class="text-center m-3">
@@ -285,7 +285,7 @@
 
                     <div class="card tarjproductos " style="width: 18rem">
 
-                        <img src="../assets/oferta08.png" class="card-img-top mt-3"
+                        <img src="../assets/sgsgsgs.jpg" class="card-img-top mt-3"
                             alt="Babyliss Pro AFEITADORA FOIL FX03 BABYLISS">
 
                         <div class="text-center m-3">
@@ -377,7 +377,6 @@
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
         crossorigin="anonymous"></script>
     <script src="../js/bootstrap.bundle.min.js"></script>
-    <script src="../js/app.js"></script>
-</body>
+    <script src="../js/app.js"></script></body>
 
 </html>
