se agregaron cosas de SEO

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -23,7 +23,7 @@
             <div class="container-fluid">
                 <div class=" navbar-brand logo">
                     <a href="../index.html">
-                        <img src="../assets/logo2.0.png" alt="Logo Barber Shop">
+                        <img src="../assets/logo2.0.png" loading="lazy" alt="Logo Barber Shop">
                     </a>
                 </div>
                 <button class="navbar-toggler btnestilo" type="button" data-bs-toggle="collapse"
@@ -55,31 +55,6 @@
         </nav>
     </header>
 
-    <!-- <main class="container-fluid fotofondocontacto ">
-        <section class="container">
-            <div class="row divformcontacto">
-                <form action="" class="formcontacto">
-                    <div class="div-dentro-del-form">
-                        <h1>CONTACTO</h1>
-                        <div class="contacto-form">
-                            <input type="text" placeholder="Nombre">
-
-                            <input type="text" placeholder="Apellido">
-                        </div>
-                        <input type="email" placeholder="Email">
-                        <div class="contacto-form-textarea">
-                            <textarea name="" id="" placeholder="Mensaje"></textarea>
-                        </div>
-                        <div>
-                            <label for="notificacion">Deseas recibir notificaciones?</label>
-                            <input type="checkbox" name="notificacion">
-                        </div>
-                        <a href="" class="btnform">Enviar</a>
-                    </div>
-                </form>
-            </div>
-        </section>
-    </main> -->
     <main class="container-fluid fotofondocontacto ">
         <section class="container col-6 h-auto w-100 d-flex align-content-center justify-content-center justify-content-md-end">
             <form class="row d-flex justify-content-center bg-color mt-5 ">
@@ -114,7 +89,7 @@
             <div class="row">
 
                 <div class="d-flex flex-column align-items-center p-5" data-aos="flip-left" data-aos-duration="2000">
-                    <img src="../assets/logo2.0.png" alt="foto del logo">
+                    <img src="../assets/logo2.0.png" loading="lazy" alt="foto del logo">
                 </div>
                 <div class="footer-contenido">
                     <div class="py-3 col-lg-3" data-aos="fade-up" data-aos-duration="2000">
@@ -122,11 +97,11 @@
 
                         <div class="p-3 d-flex flex-column">
                             <ul class="categorias-footer">
-                                <li class="categorias-footer__li p-1"><a href="maquinas.html">Máquinas</a></li>
-                                <li class="categorias-footer__li p-1"><a href="tijerasynavajas.html">Tijeras Y
-                                        Navajas</a></li>
-                                <li class="categorias-footer__li p-1"><a href="accesorios.html">Accesorios</a></li>
-                                <li class="categorias-footer__li p-1"><a href="contacto.html">Contacto</a></li>
+                                <li class="categorias-footer__li p-1"><a href="maquinas.html"><h4>Máquinas</h4></a></li>
+                                <li class="categorias-footer__li p-1"><a href="tijerasynavajas.html"><h4>Tijeras Y
+                                            Navajas</h4></a></li>
+                                <li class="categorias-footer__li p-1"><a href="accesorios.html"><h4>Accesorios</h4></a></li>
+                                <li class="categorias-footer__li p-1"><a href="contacto.html"><h4>Contacto</h4></a></li>
                             </ul>
                         </div>
                     </div>
@@ -137,11 +112,11 @@
                         <div class="p-5 d-flex justify-content-around">
 
                             <a href="https://www.instagram.com/" target="_blank">
-                                <img src="../assets/instagram-logo-24.png" alt="logo de instagram">
+                                <img src="../assets/instagram-logo-24.png" loading="lazy" alt="logo de instagram">
                             </a>
 
                             <a href="https://twitter.com/" target="_blank">
-                                <img src="../assets/twitter-logo-24.png" alt="logo de twitter">
+                                <img src="../assets/twitter-logo-24.png" loading="lazy" alt="logo de twitter">
                             </a>
                         </div>
                     </div>
@@ -149,7 +124,7 @@
                     <div class="py-3 col-lg-3" data-aos="fade-up" data-aos-duration="2000">
                         <h3 class="text-center fs-2 footer-texto shadow-lg">METODOS DE PAGO</h3>
                         <div class="p-5 d-flex justify-content-center">
-                            <img src="../assets/logopago.jpg" alt="foto de tarjetas" class="w-auto">
+                            <img src="../assets/logopago.jpg" alt="foto de tarjetas" loading="lazy" class="w-auto">
                         </div>
                     </div>
                 </div>
