--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <meta name="description" content="¿Quieres convertirte en todo un experto profesional de la barberia? Este es tu sitio ideal , Al mejor Precio!!">
     <link rel="stylesheet" href="./styles/styles.css">
     <title>Barber Shop BM | Tienda Online</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -66,13 +67,13 @@
         <div id="carrusell" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="2000">
-                    <img src="./assets/carruselfoto1.jpg" class="d-block w-100 imagenCarrusel" alt="foto maquinas cortadoras de pelo">
+                    <img src="./assets/carruselfoto1.jpg" class="d-block w-100 imagenCarrusel" loading="lazy" alt="foto maquinas cortadoras de pelo">
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                    <img src="./assets/carrusel02.jpg" class="d-block w-100 imagenCarrusel" alt="foto sillon de barberia">
+                    <img src="./assets/carrusel02.jpg" class="d-block w-100 imagenCarrusel" loading="lazy" alt="foto sillon de barberia">
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                    <img src="./assets/carrusel03.jpg" class="d-block w-100 imagenCarrusel" alt="foto de salon de peluqueria">
+                    <img src="./assets/carrusel03.jpg" class="d-block w-100 imagenCarrusel" loading="lazy" alt="foto de salon de peluqueria">
                 </div>
             </div>
         </div>
@@ -119,7 +120,7 @@
         <div class="row">
 
             <div class="d-flex flex-column align-items-center p-5" data-aos="flip-left" data-aos-duration="2000">
-                <img src="./assets/logo2.0.png"  alt="foto del logo">
+                <img src="./assets/logo2.0.png" loading="lazy"  alt="foto del logo">
             </div>
             <div class="footer-contenido">
                 <div class="py-3 col-lg-3" data-aos="flip-up" data-aos-duration="1000">
@@ -127,11 +128,11 @@
 
                     <div class="p-3 d-flex flex-column">
                         <ul class="categorias-footer">
-                            <li class="categorias-footer__li p-1"><a href="./pages/maquinas.html">Máquinas</a></li>
-                            <li class="categorias-footer__li p-1"><a href="./pages/tijerasynavajas.html">Tijeras Y
-                                        Navajas</a></li>
-                            <li class="categorias-footer__li p-1"><a href="./pages/accesorios.html">Accesorios</a></li>
-                            <li class="categorias-footer__li p-1"><a href="./pages/contacto.html">Contacto</a></li>
+                            <li class="categorias-footer__li p-1"><a href="./pages/maquinas.html"><h4>Máquinas</h4></a></li>
+                            <li class="categorias-footer__li p-1"><a href="./pages/tijerasynavajas.html"><h4>Tijeras Y
+                                        Navajas</h4></a></li>
+                            <li class="categorias-footer__li p-1"><a href="./pages/accesorios.html"><h4>Accesorios</h4></a></li>
+                            <li class="categorias-footer__li p-1"><a href="./pages/contacto.html"><h4>Contacto</h4></a></li>
                         </ul>
                     </div>
                 </div>
@@ -142,11 +143,11 @@
                     <div class="p-5 d-flex justify-content-around">
 
                         <a href="https://www.instagram.com/" target="_blank">
-                            <img src="./assets/instagram-logo-24.png" alt="logo de instagram">
+                            <img src="./assets/instagram-logo-24.png" loading="lazy" alt="logo de instagram">
                         </a>
 
                         <a href="https://twitter.com/" target="_blank">
-                            <img src="./assets/twitter-logo-24.png" alt="logo de twitter">
+                            <img src="./assets/twitter-logo-24.png" loading="lazy" alt="logo de twitter">
                         </a>
                     </div>
                 </div>
@@ -154,7 +155,7 @@
                 <div class="py-3 col-lg-3" data-aos="flip-up" data-aos-duration="1000">
                     <h3 class="text-center fs-2 footer-texto shadow-lg" >METODOS DE PAGO</h3>
                     <div class="p-5 d-flex justify-content-center">
-                        <img src="./assets/logopago.jpg" alt="foto de tarjetas" class="w-auto">
+                        <img src="./assets/logopago.jpg" loading="lazy" alt="foto de tarjetas" class="w-auto">
                     </div>
                 </div>
             </div>
